# threadx-duo

./: build.sh
arch/: CMakeLists.txt
arch/riscv64/: CMakeLists.txt
arch/riscv64/src/: cache.c  start.S
common/: CMakeLists.txt
common/include/riscv64/: delay.h
common/src/riscv64/: time.c
driver/: CMakeLists.txt
driver/common/src/: system.c
driver/spinlock/: CMakeLists.txt
driver/spinlock/src/: cvi_spinlock.c
samples/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: demo_threadx.c
threadx/: CMakeLists.txt
threadx/common/: CMakeLists.txt
threadx/ports/risc-v64/gnu/: CMakeLists.txt
threadx/ports/risc-v64/gnu/src/: tx_initialize_low_level.S
threadx/utility/: CMakeLists.txt
